# rook

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: logo.blend  logo2.blend
src/: bitboard.rs  board.rs  eval.rs  hash.rs  lib.rs  main.rs  movegenerator.rs  perft.txt  pos.rs  types.rs  uci.rs
